[fix] updated height components to reduce page overflow

--- a/Frontend/mynd/src/components/Calendar/user-calendar.scss
+++ b/Frontend/mynd/src/components/Calendar/user-calendar.scss
@@ -26,7 +26,7 @@ $box-shadow: 10px 1px 10px #00000041;
   text-align: center;
   border-radius: 25px;
   margin: 0 auto;
-  margin-top: 35px;
+  margin-top:2%;
   margin-bottom: 25px;
   padding: 10px;
   padding-bottom: 30px;
@@ -53,9 +53,9 @@ $box-shadow: 10px 1px 10px #00000041;
   text-align: center;
   border-radius: 25px;
   overflow-y:auto;
-  max-height: 88vh;
+  max-height: 89vh;
   margin: 0 auto;
-  margin-top: 10px;
+  margin-top:1%;
   margin-left: 25px;
   box-shadow: $box-shadow;
 }
